[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scene/BulletScene/PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Collision.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 138.762

[sub_resource type="CircleShape2D" id=2]
radius = 25.4146

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.82074, -0.187866 )
input_pickable = true
collision_layer = 9
script = ExtResource( 1 )
detect_radius = 250
fire_rate = 0.4
Bullet = ExtResource( 2 )

[node name="Visibility" type="Area2D" parent="."]
position = Vector2( 0.719023, -0.0425296 )
script = ExtResource( 3 )

[node name="Attack" type="CollisionShape2D" parent="Visibility"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.361, -0.185 )
scale = Vector2( 0.044, 0.047 )

[node name="EnemyDetector" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
z_index = -1
shape = SubResource( 1 )

[node name="Range" type="Timer" parent="."]
wait_time = 3.84
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.09
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="timeout" from="Range" to="." method="_on_Range_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
